...
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/button_changeUsername"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_changeUsername"
            android:textAlignment="center"
            android:textAllCaps="true"
...
        android:contentDescription="Profile Picture"
        android:rotation="0"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_userName"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
